--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,3 +8,11 @@ services:
       - '5432:5432'
     environment:
       POSTGRES_PASSWORD: pass123
+
+  test_db:
+    image: postgres
+    restart: always
+    ports:
+      - '5433:5432'
+    environment:
+      POSTGRES_PASSWORD: pass123
