--- a/package.json
+++ b/package.json
@@ -14,11 +14,15 @@
     "start:debug": "nest start --debug --watch",
     "start:prod": "node dist/main",
     "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
+    "pretest": "docker-compose up -d test_db && env-cmd -f .env.test npx prisma migrate dev",
     "test": "jest",
+    "posttest": "docker-compose stop test_db && docker-compose rm -f test_db",
     "test:watch": "jest --watch",
     "test:cov": "jest --coverage",
     "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
-    "test:e2e": "jest --config ./test/jest-e2e.json"
+    "pretest:e2e": "docker-compose up -d test_db && env-cmd -f .env.test npx prisma migrate dev",
+    "test:e2e": "NODE_ENV=test env-cmd -f .env.test jest --config ./test/jest-e2e.json",
+    "posttest:e2e": "docker-compose stop test_db && docker-compose rm -f test_db"
   },
   "dependencies": {
     "@nestjs/common": "^8.0.0",
@@ -44,6 +48,7 @@
     "@types/supertest": "^2.0.11",
     "@typescript-eslint/eslint-plugin": "^4.28.2",
     "@typescript-eslint/parser": "^4.28.2",
+    "env-cmd": "^10.1.0",
     "eslint": "^7.30.0",
     "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-prettier": "^3.4.0",
