test: tests scripsts configured

--- a/package.json
+++ b/package.json
@@ -15,8 +15,11 @@
     "start:prod": "node dist/main",
     "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
     "pretest": "docker-compose up -d test_db && env-cmd -f .env.test npx prisma migrate dev",
-    "test": "jest",
+    "test": "NODE_ENV=test env-cmd -f .env.test jest",
     "posttest": "docker-compose stop test_db && docker-compose rm -f test_db",
+    "test:start": "docker-compose up -d test_db && env-cmd -f .env.test npx prisma migrate dev",
+    "test:end": "docker-compose stop test_db && docker-compose rm -f test_db",
+    "test:fast": "NODE_ENV=test env-cmd -f .env.test jest",
     "test:watch": "jest --watch",
     "test:cov": "jest --coverage",
     "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
