--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "@nestjs/swagger": "^5.1.0",
     "@nestjs/testing": "^8.0.0",
     "@types/express": "^4.17.13",
+    "@types/faker": "^5.5.8",
     "@types/jest": "^27.0.1",
     "@types/node": "^16.0.0",
     "@types/supertest": "^2.0.11",
@@ -55,6 +56,7 @@
     "eslint": "^7.30.0",
     "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-prettier": "^3.4.0",
+    "faker": "^5.5.3",
     "jest": "^27.0.6",
     "prettier": "^2.3.2",
     "prisma": "^3.1.1",
