--- a/.gitignore
+++ b/.gitignore
@@ -2,8 +2,8 @@
 .env
 
 # compiled output
-/dist
-/node_modules
+dist
+node_modules
 
 # Logs
 logs
@@ -18,7 +18,7 @@ lerna-debug.log*
 .DS_Store
 
 # Tests
-/coverage
+coverage
 /.nyc_output
 
 # IDEs and editors
