--- a/package.json
+++ b/package.json
@@ -19,9 +19,12 @@
     "react-icons": "^4.3.1"
   },
   "devDependencies": {
+    "@types/node": "^16.10.3",
     "@types/react": "17.0.27",
     "eslint": "7.32.0",
     "eslint-config-next": "11.1.2",
+    "eslint-config-prettier": "^8.3.0",
+    "prettier": "^2.4.1",
     "typescript": "4.4.3"
   }
 }
