--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "analyze": "ANALYZE=true next build"
   },
   "dependencies": {
+    "@chakra-ui/icons": "^1.0.15",
     "@chakra-ui/react": "^1.6.9",
     "@emotion/react": "^11.4.1",
     "@emotion/styled": "^11.3.0",
@@ -17,9 +18,12 @@
     "next": "11.1.2",
     "react": "17.0.2",
     "react-dom": "17.0.2",
-    "react-icons": "^4.3.1"
+    "react-icons": "^4.3.1",
+    "react-query": "^3.25.1",
+    "react-toggle-dark-mode": "^1.0.4"
   },
   "devDependencies": {
+    "@next/bundle-analyzer": "^11.1.2",
     "@types/node": "^16.10.3",
     "@types/react": "17.0.27",
     "eslint": "7.32.0",
