--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@emotion/react": "^11.4.1",
     "@emotion/styled": "^11.3.0",
     "axios": "^0.22.0",
+    "faker": "^5.5.3",
     "framer-motion": "^4.1.17",
     "next": "11.1.2",
     "react": "17.0.2",
@@ -25,6 +26,7 @@
   },
   "devDependencies": {
     "@next/bundle-analyzer": "^11.1.2",
+    "@types/faker": "^5.5.8",
     "@types/node": "^16.10.3",
     "@types/react": "17.0.27",
     "eslint": "7.32.0",
