--- a/package.json
+++ b/package.json
@@ -20,8 +20,10 @@
     "next": "11.1.2",
     "react": "17.0.2",
     "react-dom": "17.0.2",
+    "react-hook-form": "^7.17.2",
     "react-icons": "^4.3.1",
     "react-query": "^3.25.1",
+    "react-scroll": "^1.8.4",
     "react-toggle-dark-mode": "^1.0.4"
   },
   "devDependencies": {
@@ -29,6 +31,7 @@
     "@types/faker": "^5.5.8",
     "@types/node": "^16.10.3",
     "@types/react": "17.0.27",
+    "@types/react-scroll": "^1.8.3",
     "eslint": "7.32.0",
     "eslint-config-next": "11.1.2",
     "eslint-config-prettier": "^8.3.0",
