--- a/package.json
+++ b/package.json
@@ -10,13 +10,17 @@
     "analyze": "ANALYZE=true next build"
   },
   "dependencies": {
+    "@brazilian-utils/brazilian-utils": "^1.0.0-rc.12",
     "@chakra-ui/icons": "^1.0.15",
     "@chakra-ui/react": "^1.6.9",
     "@emotion/react": "^11.4.1",
     "@emotion/styled": "^11.3.0",
+    "@hookform/resolvers": "^2.8.2",
     "axios": "^0.22.0",
+    "date-fns": "^2.25.0",
     "faker": "^5.5.3",
     "framer-motion": "^4.1.17",
+    "imask": "^6.2.2",
     "next": "11.1.2",
     "react": "17.0.2",
     "react-dom": "17.0.2",
@@ -24,7 +28,8 @@
     "react-icons": "^4.3.1",
     "react-query": "^3.25.1",
     "react-scroll": "^1.8.4",
-    "react-toggle-dark-mode": "^1.0.4"
+    "react-toggle-dark-mode": "^1.0.4",
+    "yup": "^0.32.9"
   },
   "devDependencies": {
     "@next/bundle-analyzer": "^11.1.2",
