--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@brazilian-utils/brazilian-utils": "^1.0.0-rc.12",
     "@chakra-ui/icons": "^1.0.15",
     "@chakra-ui/react": "^1.6.9",
+    "@chakra-ui/spinner": "^1.1.12",
     "@emotion/react": "^11.4.1",
     "@emotion/styled": "^11.3.0",
     "@hookform/resolvers": "^2.8.2",
