--- a/package.json
+++ b/package.json
@@ -7,6 +7,8 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
+    "test": "jest --watch",
+    "test:ci": "jest --ci",
     "analyze": "ANALYZE=true next build"
   },
   "dependencies": {
@@ -34,14 +36,21 @@
   },
   "devDependencies": {
     "@next/bundle-analyzer": "^11.1.2",
+    "@testing-library/jest-dom": "^5.14.1",
+    "@testing-library/react": "^12.1.2",
+    "@testing-library/user-event": "^13.3.0",
     "@types/faker": "^5.5.8",
     "@types/node": "^16.10.3",
     "@types/react": "17.0.27",
     "@types/react-scroll": "^1.8.3",
+    "babel-jest": "^27.2.5",
     "eslint": "7.32.0",
     "eslint-config-next": "11.1.2",
     "eslint-config-prettier": "^8.3.0",
+    "identity-obj-proxy": "^3.0.0",
+    "jest": "^27.2.5",
     "prettier": "^2.4.1",
+    "react-test-renderer": "^17.0.2",
     "typescript": "4.4.3"
   }
 }
