--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
-    "test": "jest --watch",
+    "test": "jest --watch --detectOpenHandles",
     "test:ci": "jest --ci",
     "analyze": "ANALYZE=true next build"
   },
@@ -45,13 +45,17 @@
     "@types/react": "17.0.27",
     "@types/react-scroll": "^1.8.3",
     "babel-jest": "^27.2.5",
+    "broadcast-channel": "^4.2.0",
     "eslint": "7.32.0",
     "eslint-config-next": "11.1.2",
     "eslint-config-prettier": "^8.3.0",
+    "eslint-plugin-jsx-a11y": "^6.4.1",
     "identity-obj-proxy": "^3.0.0",
     "jest": "^27.2.5",
+    "jest-dom": "^4.0.0",
     "prettier": "^2.4.1",
     "react-test-renderer": "^17.0.2",
+    "ts-jest": "^27.0.5",
     "typescript": "4.4.3"
   }
 }
