--- a/package.json
+++ b/package.json
@@ -24,8 +24,9 @@
     "test:watch": "jest --watch",
     "test:cov": "jest --coverage",
     "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
-    "pretest:e2e": "docker-compose up -d test_db && env-cmd -f .env.test npx prisma migrate dev",
-    "test:e2e": "NODE_ENV=test env-cmd -f .env.test jest --config ./test/jest-e2e.json",
+    "test:e2e:fast": "NODE_ENV=test env-cmd -f .env.test jest --config ./test/jest-e2e.json",
+    "pretest:e2e": "docker-compose up -d test_db",
+    "test:e2e": "docker-compose up -d test_db && env-cmd -f .env.test npx prisma migrate dev && NODE_ENV=test env-cmd -f .env.test jest --config ./test/jest-e2e.json",
     "posttest:e2e": "docker-compose stop test_db && docker-compose rm -f test_db"
   },
   "dependencies": {
