--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,13 +1,35 @@
 version: '3'
 
 services:
-  db:
+  app:
+    build: .
+    container_name: oncar-api
+    command: sh -c "npm run migrate &&  npm run start"
+    restart: always
+    ports:
+      - 3333:3333
+    volumes:
+      - .:/usr/app
+    links:
+      - postgres
+    depends_on:
+      - postgres
+    environment:
+      DATABASE_URL: ${DATABASE_URL}
+      DATABASE_USER: ${DATABASE_USER}
+      DATABASE_PASSWORD: ${DATABASE_PASSWORD}
+      DATABASE_NAME: ${DATABASE_NAME}
+      DATABASE_HOST: host.docker.internal
+
+  postgres:
     image: postgres
     restart: always
     ports:
-      - '5432:5432'
+      - '${DATABASE_PORT}:5432'
     environment:
-      POSTGRES_PASSWORD: pass123
+      POSTGRES_USER: ${DATABASE_USER}
+      POSTGRES_PASSWORD: ${DATABASE_PASSWORD}
+      POSTGRES_NAME: ${DATABASE_NAME}
 
   test_db:
     image: postgres
