--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "start:dev": "nest start --watch",
     "start:debug": "nest start --debug --watch",
     "start:prod": "node dist/main",
-    "migrate": "npx prisma migrate dev",
+    "migrate": "npx prisma migrate dev && npx prisma generate",
     "seed": "node dist/prisma/seed.js",
     "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
     "pretest": "docker-compose up -d test_db && env-cmd -f .env.test npx prisma migrate dev",
