--- a/package.json
+++ b/package.json
@@ -9,11 +9,11 @@
     "prebuild": "rimraf dist",
     "build": "nest build",
     "format": "prettier --write \"src/**/*.ts\" \"test/**/*.ts\"",
-    "start": "npx prisma migrate dev && npx prisma generate && nest start",
+    "start": "npx prisma db push --preview-feature && npx prisma generate && nest start",
     "start:dev": "nest start --watch",
     "start:debug": "nest start --debug --watch",
     "start:prod": "node dist/main",
-    "migrate": "npx prisma migrate dev && npx prisma generate",
+    "migrate": "npx prisma db push --preview-feature && npx prisma generate",
     "seed": "node dist/prisma/seed.js",
     "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
     "pretest": "docker-compose up -d test_db && env-cmd -f .env.test npx prisma migrate dev",
