--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,7 +4,7 @@ services:
   app:
     build: .
     container_name: oncar-api
-    command: sh -c "npm run migrate &&  npm run start"
+    command: sh -c "npx prisma db push --preview-feature && npx prisma generate &&  npm run start"
     restart: always
     ports:
       - 3333:3333
