--- a/package.json
+++ b/package.json
@@ -13,11 +13,11 @@
     "start:dev": "nest start --watch",
     "start:debug": "nest start --debug --watch",
     "start:prod": "node dist/main",
-    "migrate": "npx prisma db push --preview-feature && npx prisma generate",
+    "migrate": "npx prisma migrate dev && npx prisma generate",
     "seed": "node dist/prisma/seed.js",
     "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
-    "pretest": "docker-compose up -d test_db && env-cmd -f .env.test npx prisma migrate dev",
-    "test": "NODE_ENV=test env-cmd -f .env.test jest",
+    "pretest": "docker-compose up -d test_db",
+    "test": "docker-compose up -d test_db && env-cmd -f .env.test npx prisma migrate dev && NODE_ENV=test env-cmd -f .env.test jest",
     "posttest": "docker-compose stop test_db && docker-compose rm -f test_db",
     "test:start": "docker-compose up -d test_db && env-cmd -f .env.test npx prisma migrate dev",
     "test:end": "docker-compose stop test_db && docker-compose rm -f test_db",
